    * New "Preview" feature for the Organize Collection dialog. Patch by
      Maximilian Güntner <maximilian.guentner@gmail.com>.
    * String filtering in the albums applet.
    * Ability to change text alignment in the lyrics applet.
    * gpodder.net Service, a Podcast Directory displaying the most used Tags
      from gpodder.net & the top Podcasts of these Tags

  CHANGES:
    * Plugins can now be optionally enabled in the config dialog.
    * Script selector is moved from the menubar to the config dialog.
    * Now all changes to Preset Formats in Organize Collection dialog get saved on close,
      doesn't matter If dialog was accepted or rejected.
    * Added "Update Preset" button to Organize Collection dialog, which updates currently
      choosen scheme.
    * Renewed FilterEditor dialog.
    * Changed tokens syntax in FileNameLayoutDialog (TagGuesser, OrginizeCollection dialogs)
      now tokens wrapped in percent signs (%token% instead of %token).
    * Added ability to guess tags from whole track path. (TagGuesser dialog)
    * Use KDirWatch to watch changes to collection.
    * Do always store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)
    * Added missing tooltip for animation settings. Patch by Bhargav Mangipudi
      <bhargav.1191@gmail.com>. (BR 248690)

  BUGFIXES:
    * Fixed unreadable text in lyrics applet in kde 4.6. (BR 265311)
    * Fixed tag dialog crash when sorting by genre and then changing tags.
    * Fixed track's statistics update in case of StopAfterCurrent playback mode
      (prevent double statistics change). (BR 265654)
    * Delete .mood files when tracks got removed from collection via Collection
      view context menu, and move them to new destination during Organize Collection process.
      (BR 261629)
    * Fixed "Configure Amarok..." disappearing in tray menu. (BR 258226)
    * Fixed crash when quitting Amarok. (BR 253676, BR 257407)