@@ -9,15 +9,16 @@ class QKeyEvent;
 class OpmlDirectoryView : public Amarok::PrettyTreeView
 {
     Q_OBJECT
-public:
-    explicit OpmlDirectoryView( QWidget *parent = 0 );
+    public:
+        explicit OpmlDirectoryView( QWidget *parent = 0 );
 
-    virtual void contextMenuEvent( QContextMenuEvent *event );
-    virtual void keyPressEvent( QKeyEvent *event );
+        virtual void contextMenuEvent( QContextMenuEvent *event );
+        virtual void keyPressEvent( QKeyEvent *event );
 
-signals:
-
-public slots:
+    protected:
+        //reimplemented to allow only leaf nodes to be selected
+        virtual QItemSelectionModel::SelectionFlags selectionCommand( const QModelIndex &index,
+                                                                    const QEvent *event = 0 ) const;
 
 };
 
