@@ -15,6 +15,8 @@ VERSION 2.4.1
       from gpodder.net & the top Podcasts of these Tags
 
   CHANGES:
+    * The podcast directory service is now based on incremental parsing of OPML without
+      caching in the database.
     * Plugins can now be optionally enabled in the config dialog.
     * Script selector is moved from the menubar to the config dialog.
     * Now all changes to Preset Formats in Organize Collection dialog get saved on close,
